bugfix - align mbti image to center

--- a/app/views/assets/css/style.css
+++ b/app/views/assets/css/style.css
@@ -16,9 +16,15 @@ ul.weather {
 div.mbti_icon_container {
   display: flex;
   justify-content: center;
-  max-width: 300px;
+  align-content: center;
+  flex-wrap: wrap;
+  /* max-width: 300px; */
 }
 
-img {
-  width: 90%;
+.mbti_icon_container img {
+  width: 30%;
+  max-width: 300px;
+  text-align: center;
+  object-position: center center;
+  /* transform: translate(-50%, -50%); */
 }
